Fix overflowing text on Media Card see #73 (#74)
* Fix overflowing text on Media Card see #73

* Minor

--- a/src/blocks/media/scss/_content.scss
+++ b/src/blocks/media/scss/_content.scss
@@ -32,6 +32,8 @@
 	flex-direction: column;
 	justify-content: center;
 
+	word-break: break-word;
+
 	&:after {
 		content: '';
 		position: absolute;
